# meiga

./: .gitignore  LICENSE  README.md
dev_meiga/Applications/G4RockSimulator/: CMakeLists.txt  G4RockDetectorConstruction.h  G4RockPhysicsList.cc  G4RockSimulator.cc  G4RockSimulator.h  G4RockTrackingAction.cc
dev_musim/: CMakeLists.txt
dev_musim/Applications/: CMakeLists.txt
dev_musim/Applications/G4BarSimulator/: CMakeLists.txt  G4BarDetectorConstruction.cc  G4BarDetectorConstruction.h  G4BarEventAction.cc  G4BarEventAction.h  G4BarPrimaryGeneratorAction.cc  G4BarSimulator.cc  G4BarSimulator.h
dev_musim/Applications/G4ExSimulator/: G4ExSimulator.cc  G4ExSimulator.json
dev_musim/Applications/G4RockSimulator/: CMakeLists.txt  G4Rock.cc  G4RockActionInitialization.cc  G4RockActionInitialization.h  G4RockDetectorConstruction.cc  G4RockDetectorConstruction.h  G4RockEventAction.cc  G4RockEventAction.h  G4RockModuleAction.cc  G4RockModuleAction.h  G4RockPrimaryGeneratorAction.cc  G4RockPrimaryGeneratorAction.h  G4RockRunAction.cc  G4RockSiPMAction.cc  G4RockSiPMAction.h  G4RockSimulator.cc  G4RockSimulator.h  G4RockSteppingAction.cc  G4RockSteppingAction.h  ModuleList.xml  PhysicsListMessenger_cc  vis.mac
dev_musim/Framework/: CMakeLists.txt  Event.cc  Event.h  SiPMSimData.cc  SimData.cc  SimData.h
dev_musim/Framework/Detector/: CMakeLists.txt  Detector.cc  Detector.h  Module.cc  Module.h  SiPM.cc  SiPM.h
dev_musim/Framework/Event/: CMakeLists.txt
dev_musim/Framework/SimData/: CMakeLists.txt  SiPMSimData.cc  SiPMSimData.h  SimData.cc  SimData.h
dev_musim/IO/: CMakeLists.txt  ReadParticleFile.cc  ReadParticleFile.h
dev_musim/Utilities/: CMakeLists.txt  Particle.cc  Particle.h  PhysicsConstants.h
src/: .gitignore  CMakeLists.txt
src/Analysis/: G4HodoscopeSimulator_Analysis.py  G4MuDecSimulator_Analysis.py  G4WCDSimulator_Analysis.py  SimDataReader.py  read_output.py  utils.py
src/Applications/: CMakeLists.txt  README
src/Applications/G4AndesSimulator/: CMakeLists.txt  G4AndesDetectorConstruction.cc  G4AndesDetectorConstruction.h  G4AndesPhysicsList.cc  G4AndesPhysicsList.h  G4AndesPrimaryGeneratorAction.cc  G4AndesRunAction.cc  G4AndesRunAction.h  G4AndesSimulator.cc  G4AndesSimulator.h  G4AndesSimulator.json  G4AndesSteppingAction.cc  G4AndesSteppingAction.h  G4AndesTrackingAction.cc  G4AndesTrackingAction.h  README
src/Applications/G4BarSimulator/: CMakeLists.txt  G4BarDetectorConstruction.cc  G4BarEventAction.cc  G4BarEventAction.h  G4BarPhysicsList.h  G4BarPrimaryGeneratorAction.h  G4BarRunAction.cc  G4BarRunAction.h  G4BarSimulator.cc  G4BarSimulator.h  G4BarSteppingAction.cc  G4BarTrackingAction.cc
src/Applications/G4CasposoSimulator/: CMakeLists.txt  DetectorList.xml  G4CasposoDetectorConstruction.cc  G4CasposoDetectorConstruction.h  G4CasposoEventAction.cc  G4CasposoEventAction.h  G4CasposoPhysicsList.cc  G4CasposoPhysicsList.h  G4CasposoPrimaryGeneratorAction.cc  G4CasposoPrimaryGeneratorAction.h  G4CasposoRunAction.cc  G4CasposoRunAction.h  G4CasposoSimulator.cc  G4CasposoSimulator.h  G4CasposoSimulator.json  G4CasposoSteppingAction.cc  G4CasposoSteppingAction.h  G4CasposoTrackingAction.cc  G4CasposoTrackingAction.h  OpticalPhysics.cc  README
src/Applications/G4ExSimulator/: CMakeLists.txt  DetectorList.xml  DetectorProperties.xml  G4ExActionInitialization.cc  G4ExActionInitialization.h  G4ExDetectorConstruction.cc  G4ExDetectorConstruction.h  G4ExEventAction.cc  G4ExEventAction.h  G4ExPrimaryGeneratorAction.cc  G4ExPrimaryGeneratorAction.h  G4ExRunAction.cc  G4ExRunAction.h  G4ExSimulator.cc  G4ExSimulator.h  G4ExSimulator.json  G4ExSteppingAction.cc  G4ExSteppingAction.h  G4ExTrackingAction.cc  G4ExTrackingAction.h  README  vertical_muon.txt
src/Applications/G4HodoscopeSimulator/: CMakeLists.txt  DetectorList.xml  G4HodoscopeActionInitialization.cc  G4HodoscopeActionInitialization.h  G4HodoscopeDetectorConstruction.cc  G4HodoscopeDetectorConstruction.h  G4HodoscopeEventAction.cc  G4HodoscopeEventAction.h  G4HodoscopePhysicsList.cc  G4HodoscopePhysicsList.h  G4HodoscopePrimaryGeneratorAction.cc  G4HodoscopePrimaryGeneratorAction.h  G4HodoscopeRunAction.cc  G4HodoscopeRunAction.h  G4HodoscopeSimulator.cc  G4HodoscopeSimulator.h  G4HodoscopeSimulator.json  G4HodoscopeSteppingAction.cc  G4HodoscopeSteppingAction.h  G4HodoscopeTrackingAction.cc  G4HodoscopeTrackingAction.h  README  vertical_muon.txt
src/Applications/G4LeadSimulator/: CMakeLists.txt  DetectorList.xml  G4LeadActionInitialization.cc  G4LeadActionInitialization.h  G4LeadDetectorConstruction.cc  G4LeadDetectorConstruction.h  (+14 more)
src/Config/: DetectorProperties.xml  Ut_DetectorList.xml  Ut_G4AppSimulator.json
src/Documentation/: CMakeLists.txt
src/Framework/: CMakeLists.txt
src/G4Models/: CMakeLists.txt  Dummy.cc  Dummy.h  ExtraPhysics.cc  ExtraPhysics.hh  G4MBaseApplication.cc  G4MBaseApplication.h  G4MDetectorAction.cc  G4MDetectorAction.h  G4MDetectorConstruction.cc  G4MDetectorConstruction.h  G4MOptDeviceAction.cc  G4MOptDeviceAction.h  G4MPMTAction.cc  G4MPMTAction.h  G4MPhysicsList.cc  G4MPhysicsList.h  G4MPixelAction.cc  G4MPixelAction.h  G4MPrimaryGeneratorAction.cc  G4MPrimaryGeneratorAction.h  G4MScintillatorBarAction.cc  G4MScintillatorBarAction.h  G4MSiPMAction.cc  G4MSiPMAction.h  Hodoscope.cc  Hodoscope.h  Materials.cc  Materials.h  Mudulus.cc  Mudulus.h  Musaic.cc  Musaic.h  OpticalPhysics.cc  SaltyWCD.cc  SaltyWCD.h  Scintillator.cc  Scintillator.h  StepMax.cc  StepMax.hh  (+2 more)
src/IO/: CMakeLists.txt  DataWriter.cc  DataWriter.h  ParticleFiller.cc  ParticleFiller.h  ReadParticleFile.cc  ReadParticleFile.h
src/UnitTest/: CMakeLists.txt  Ut_ConfigManager.cc  Ut_ConfigManager.h  runTests.cc
src/Utilities/: CMakeLists.txt  CorsikaUtilities.cc  CorsikaUtilities.h  EcoMug.h  Geometry.cc  Geometry.h  Logger.cc  Logger.h  Particle.cc  Particle.h  ParticleInjection.cc  ParticleInjection.h  PhysicsConstants.h  PrimaryGenerator.cc  PrimaryGenerator.h  Utilities.cc  Utilities.h  createjobs.py  generate.sh  read_output.py  runjobs.py
src/cmake/: Makefile  cmake_install.cmake
(+269 files in other folders)
