file(GLOB sources ${CMAKE_CURRENT_SOURCE_DIR}/*.cc)
file(GLOB headers ${CMAKE_CURRENT_SOURCE_DIR}/*.h)
add_library(musim_io STATIC ${sources} ${headers})
set(MUSIM_LIBRARIES musim_io ${MUSIM_LIBRARIES} PARENT_SCOPE)
install(FILES ${headers} DESTINATION include)
install(TARGETS ${MUSIM_LIBRARIES} DESTINATION lib)