file(GLOB sources ${CMAKE_CURRENT_SOURCE_DIR}/*.cc)
file(GLOB headers ${CMAKE_CURRENT_SOURCE_DIR}/*.h)
add_library(meiga_io STATIC ${sources} ${headers})
set(MEIGA_LIBRARIES meiga_io ${MEIGA_LIBRARIES} PARENT_SCOPE)
install(FILES ${headers} DESTINATION include)
install(TARGETS ${MEIGA_LIBRARIES} DESTINATION lib)