file(GLOB sources ${CMAKE_CURRENT_SOURCE_DIR}/*.cc)
file(GLOB headers ${CMAKE_CURRENT_SOURCE_DIR}/*.h)
#add_library(musim_framework_configmanager STATIC ${sources} ${headers})
#set(MUSIM_LIBRARIES musim_framework_configmanager ${MUSIM_LIBRARIES} PARENT_SCOPE)
#install(FILES ${headers} DESTINATION include)
#install(TARGETS musim_framework_configmanager DESTINATION lib)
