file(GLOB sources ${CMAKE_CURRENT_SOURCE_DIR}/*.cc)
file(GLOB headers ${CMAKE_CURRENT_SOURCE_DIR}/*.h)
add_library(meiga_framework_detector STATIC ${sources} ${headers})
target_link_libraries(meiga_framework_detector PUBLIC meiga_g4models)
set(MEIGA_LIBRARIES ${MEIGA_LIBRARIES} meiga_framework_detector PARENT_SCOPE)
install(FILES ${headers} DESTINATION include)
install(TARGETS meiga_framework_detector DESTINATION lib)
