file(GLOB sources ${CMAKE_CURRENT_SOURCE_DIR}/*.cc)
file(GLOB headers ${CMAKE_CURRENT_SOURCE_DIR}/*.h)
add_library(meiga_framework_event STATIC ${sources} ${headers})
#target_link_libraries(meiga_framework_event meiga_framework_configmanager)
set(MEIGA_LIBRARIES meiga_framework_event ${MEIGA_LIBRARIES} PARENT_SCOPE)
install(FILES ${headers} DESTINATION include)
install(TARGETS meiga_framework_event DESTINATION lib)
